fix for variable db_user

--- a/playbook-install.yml
+++ b/playbook-install.yml
@@ -26,7 +26,7 @@
     become: yes
     shell: |
         export ext="pg_trgm"
-        psql --user {{pac}}_{{dbuser}} -c "SELECT * FROM pg_extension where extname = '$ext'" | grep "$ext" || exit -1
+        psql --user {{pac}}_{{db_user}} -c "SELECT * FROM pg_extension where extname = '$ext'" | grep "$ext" || exit -1
     args:
       executable: /bin/bash
       chdir: "/home/pacs/{{pac}}/users/{{user}}/"
